Update theme details and accent colors for Teal Abyss theme

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -12,10 +12,10 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/style/base/ui-va
 @gray-lighter: darken(@gray-base, 92.5%);
 @white: #0a0a0a;
 
-@accent-primary: #58b660;
+@accent-primary: #00ffdb;
 @accent-primary-dark: darken(@accent-primary, 10%);
 
-@background-primary: #212121;
+@background-primary: #000000;
 @background-off-primary: #212121;
 @background-secondary: #121212;
 @background-tertiary: #6d7987;
@@ -50,3 +50,4 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/style/base/ui-va
 
 @toolbar-background-color: #121212;
 @panel-background-color: #121212;
+
