Add font family and size variables to ui-variables.less

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -51,3 +51,5 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/style/base/ui-va
 @toolbar-background-color: #121212;
 @panel-background-color: #121212;
 
+@font-family: 'JetBrains Mono', monospace;
+@font-size: 16px;
